@@ -84,6 +84,9 @@ function cms_config_load($loadLocal = true)
 	#Automatically assign alias based on page title?
 	$config["auto_alias_content"] = true;
 
+	#Are we an advanced user?
+	$config["advanced_user"] = false;
+
 	if ($loadLocal == true)
 	{
 		if (file_exists(dirname(dirname(__FILE__))."/config.php") && !cms_config_check_old_config())
